--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Bakery</title>
+    <title>Магазин выпечки</title>
+    <meta name="description" content="Только качественная выпечка из натуральных ингридиентов!">
 </head>
 <body>
-    
+    <header>
+        <img src="./icons/01-Logo.svg" alt="логотип сайта">
+        <nav>
+            <ul>
+                <li><a href="#">О НАС</a></li>
+                <li><a href="#">НОВОСТИ</a></li>
+                <li><a href="#">МЕНЮ</a></li>
+                <li><a href="#">КОНТАКТЫ</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="section-about">
+            <div class="section-about__block">
+                <div class="section-about__border">
+                    <h2 class="section-about__title">Специальный заказ</h2>
+                    <p class="section-about__text">Вот вам яркий пример современных тенденций — высококачественный прототип будущего проекта обеспечивает широкому кругу (специалистов) участие в формировании новых принципов формирования материально-технической базы.</p>
+                </div>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+        <nav>
+
+        </nav>
+    </footer>
 </body>
 </html>
