--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,17 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="section-description">
+            <div class="section-description__container">
+                <img src="./img/03-Иконка.svg" alt="свежая выпечка">
+                <img src="./img/02-Иконка.svg" alt="пирожные">
+                <img src="./img/01-Иконка.svg" alt="сладости">
+            </div>
+            <div class="section-description__text-container">
+                <h1>Выпечка - <span>это</span> вкусно</h1>
+                <p>Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Задача организации, в особенности же новая модель организационной деятельности влечет за собой процесс внедрения и модернизации новых предложений. Задача организации, в особенности же дальнейшее развитие различных форм деятельности играет важную роль в формировании систем массового участия. Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Таким образом реализация намеченных плановых заданий позволяет выполнять важные задания по разработке систем массового участия.</p>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer>
