feat: add third section

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Магазин выпечки</title>
     <meta name="description" content="Только качественная выпечка из натуральных ингридиентов!">
@@ -40,11 +41,20 @@
                 <p>Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Задача организации, в особенности же новая модель организационной деятельности влечет за собой процесс внедрения и модернизации новых предложений. Задача организации, в особенности же дальнейшее развитие различных форм деятельности играет важную роль в формировании систем массового участия. Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Таким образом реализация намеченных плановых заданий позволяет выполнять важные задания по разработке систем массового участия.</p>
             </div>
         </section>
-        <section></section>
+        <section class="section-map">
+            <h3>ЗАКАЗАТЬ</h3>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A609ab0ddbdb8f2ab80558f85dc53c8a6748012d3b9178c1192cab2d8506f32f7&amp;source=constructor" width="900" height="400" frameborder="0"></iframe>
+            <hr>
+        </section>
     </main>
     <footer>
         <nav>
-
+            <ul>
+                <li><a href="#">О НАС</a></li>
+                <li><a href="#">НОВОСТИ</a></li>
+                <li><a href="#">МЕНЮ</a></li>
+                <li><a href="#">КОНТАКТЫ</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
